# nightingale

./: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  nightingale.example.toml  nightingale.example.yml  nightingale.yml
.github/workflows/: build_container.yml  compile.yml  rust.yml
src/: abort.rs  channel.rs  config.rs  error.rs  ext.rs  main.rs  metrics.rs  mutex.rs  ptr.rs  system.rs  ticket.rs  trace.rs  util.rs
src/api/: auth.rs  error.rs  mod.rs  session.rs  state.rs  tri.rs  websocket.rs
src/api/extractors/: call.rs  mod.rs  player.rs  session.rs
src/api/layers/: auth.rs  ip.rs  mod.rs  splitable.rs
src/api/metrics/: driver.rs  mod.rs  periodic.rs  track.rs
src/api/model/: connection.rs  gateway.rs  info.rs  mod.rs  nz.rs  play.rs  player.rs  ready.rs  resume.rs  state.rs  track.rs  voice.rs
src/api/routes/: connect.rs  disconnect.rs  gateway.rs  info.rs  mod.rs  play.rs  playback.rs  player.rs  prometheus.rs  queue.rs
src/api/routes/search/: deezer.rs  mod.rs  youtube.rs
src/api/serde/: from_string.rs  mod.rs  nz.rs
src/playback/: handle.rs  metadata.rs  mock.rs  mod.rs  player.rs  queue.rs  resume.rs  sharder.rs
src/playback/events/: driver.rs  mod.rs  periodic.rs  track.rs
src/playback/filters/: mod.rs
src/playback/metrics/: mod.rs  track.rs
src/playback/player/: handler.rs  mod.rs  queue.rs
src/search/: mod.rs
src/search/youtube/: mod.rs  playlist.rs  track.rs
src/source/: error.rs  http.rs  mod.rs  ytdlp.rs
src/source/deezer/: error.rs  mod.rs  model.rs  stream.rs
src/source/youtube/: mod.rs  model.rs
src/source/yt/: mod.rs  playlist.rs  track.rs
