[package]
name = "nightingale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-server = "0.6.0"
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1"
dashmap = "5"
async-trait = "0.1.77"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tungstenite = "0.21.0"
parking_lot = "0.12.1"
reqwest = "0.11.23"
typemap_rev = "0.3"
ipnet = { version = "2.9.0", features = ["serde"]}
prometheus-client = "0.22"

[dependencies.symphonia]
version = "0.5.3"
features = ["all"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird.git"
default-features = false
features = ["twilight", "driver", "gateway", "rustls", "builtin-queue"]
