[package]
name = "nightingale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-server = { version = "0.6.0", features = ["tls-rustls"]}
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
futures = "0.3"
thiserror = "1"
dashmap = "5"
async-trait = "0.1.77"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tungstenite = "0.21.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
typemap_rev = "0.3"
ipnet = { version = "2.9.0", features = ["serde"]}
prometheus-client = "0.22"
sysinfo = "0.30"
const_format = "0.2.31"
which = "6.0.0"
rusty_ytdl = { version = "=0.7.2", default-features = false, features = ["search", "live", "rustls-tls"]}
regex = "1.10.3"
toml = "0.8.12"
bytes = { version = "1.6.0", features = ["serde"] }
tracing-appender = "0.2.3"

[dependencies.symphonia]
version = "0.5.3"
features = ["all"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird.git"
branch = "current"
#version = "0.4.0"
default-features = false
features = ["driver", "gateway", "rustls"]
